[package]
name = "smloadwasm"
version = "0.1.3"
edition = "2021"
authors = ["smwasm@outlook.com"]
repository = "https://github.com/smwasm/smloadwasm.git"
license = "Apache-2.0"
description = "SmartModule Library for Loading Wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
json = "0.12.4"

smcore = "0.1.3"
smdton = "0.1.2"

[dependencies.wasmtime]
version = "17.0.0"
default-features = false
features = ["default"]
