[package]
name = "smloadwasm"
version = "0.1.6"
edition = "2024"
authors = ["smwasm@outlook.com"]
repository = "https://github.com/smwasm/smloadwasm.git"
license = "Apache-2.0"
description = "SmartModule Library for Loading Wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
lazy_static = "1.5.0"

smcore = "0.1.6"
smdton = "0.1.4"

[dependencies.wasmtime]
version = "39.0.1"
default-features = false
features = ["default"]
